--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/PearsonGrant24/Kanhava2.git",
+  "homepage": ".",
   "name": "kanhava-app",
   "version": "0.1.0",
   "private": true,
@@ -43,9 +43,7 @@
     "web-vitals": "^3.5.2"
   },
   "scripts": {
-    "start": "react-scripts start --openssl-legacy-provider",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "start": "react-scripts start --openssl-legacy-provider",    
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
