--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PUBLIC_URL=https://www.mamboschicken.com
-REACT_APP_API_BASE_URL=https://api-v1.mamboschicken.com
-REACT_APP_COOKIE_DOMAIN=.mamboschicken.com
+PUBLIC_URL=https://www.Kanhava.com
+REACT_APP_API_BASE_URL=https://api-v1.Kanhava.com
+REACT_APP_COOKIE_DOMAIN=.Kanhava.com
 REACT_APP_ACCESS_TOKEN_STORAGE_KEY=access_token
