--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://www.com.kanhava.com",
   "name": "kanhava-app",
   "version": "0.1.0",
   "private": true,
